--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
     "express-session": "~1.0.2",
+    "factory-create": "0.0.6",
+    "glob": "^5.0.15",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
     "morgan": "~1.0.0",
+    "q": "^1.4.1",
+    "redis": "^2.3.0",
     "serve-favicon": "~2.0.1",
+    "socket.io": "^1.3.7",
     "yelp": "^0.2.0"
   },
   "devDependencies": {
