--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.0.0",
     "q": "^1.4.1",
     "redis": "^2.3.0",
+    "request": "^2.65.0",
     "serve-favicon": "~2.0.1",
     "socket.io": "^1.3.7",
     "yelp": "^0.2.0"
