--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "glob": "^5.0.15",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "mongoose": "^4.2.4",
     "morgan": "~1.0.0",
     "q": "^1.4.1",
     "redis": "^2.3.0",
