--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-socket-io": "~0.7.0",
+    "angular-ui-grid": "~3.0.7",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.1.1",
     "es5-shim": "~3.0.1",
